--- a/JavaWeb/maven-projectB/pom.xml
+++ b/JavaWeb/maven-projectB/pom.xml
@@ -4,30 +4,27 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ccc212</groupId>
-    <artifactId>maven-project01</artifactId>
+    <groupId>com.itheima</groupId>
+    <artifactId>maven-projectB</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
-    
+
     <dependencies>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.2.10</version>
-<!--            <scope>test</scope>-->
+            <groupId>com.itheima</groupId>
+            <artifactId>maven-projectC</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
+            <version>4.10</version>
         </dependency>
-
     </dependencies>
 
 </project>
