--- a/practice/web/front/package.json
+++ b/practice/web/front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ccc",
+  "name": "front3",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.14",
     "vue": "^2.6.14"
   },
   "devDependencies": {
