--- a/practice/web/rear/pom.xml
+++ b/practice/web/rear/pom.xml
@@ -84,6 +84,14 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
+		<!--knife4j-->
+		<dependency>
+			<groupId>com.github.xiaoymin</groupId>
+			<artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+			<version>4.4.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
